# discord_ingress_bot

./: Cargo.toml  Dockerfile  discord-ingress-bot.yaml  discord_ingress_bot.yaml
.github/workflows/: dockerify.yaml
src/: main.rs
